# outpost

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  shell.nix
.github/workflows/: release.yml
examples/: ui_aws.rs  ui_cloudflare.rs  ui_high_traffic.rs  ui_no_proxy.rs
outpost/: CHANGELOG.md  Cargo.toml  Dockerfile  build.rs
outpost/src/: cloudflare.rs  main.rs
src/: api.rs  aws.rs  cloudflare.rs  config.rs  lib.rs  main.rs  wireguard.rs
src/aws/: cloudformation.rs  mod.rs
templates/: index.html  proxy.nix
tests/: instance.pkr.hcl
