[package]
authors = ["Tyler Cook"]
description = "A command-line application for managing outpost"
edition = "2021"
license = "AGPL-3.0-only"
name = "outpost"
repository = "https://github.com/fossable/outpost"
rust-version = "1.74"
version = "0.0.3"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["string", "derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.27"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["blocking"] }

[features]
cloudflare = []
aws = []
