[package]
authors = ["Tyler Cook"]
description = "A command-line application for managing outpost"
edition = "2021"
license = "Unlicense"
name = "outpost"
repository = "https://github.com/fossable/outpost"
rust-version = "1.74"
version = "0.0.8"

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
atty = "0.2"
aws-config = { version = "1.5.3", optional = true, features = [
  "behavior-version-latest",
] }
aws-sdk-ec2 = { version = "1.55.0", optional = true }
aws-sdk-cloudformation = { version = "1.0", optional = true }
aws-sdk-route53 = { version = "1.0", optional = true }
aws-sdk-ssm = { version = "1.0", optional = true }
axum = "0.7.5"
base64 = "0.22"
clap = { version = "4.5.4", features = ["string", "derive", "env"] }
rust-embed = { version = "8.4.0", features = ["axum", "debug-embed"] }
futures = "0.3.30"
indicatif = "0.17"
mime_guess = "2.0"
rand = "0.8"
reqwest = "0.12"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.27"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5"

[build-dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["blocking"] }

[features]
cloudflare = []
aws = ["dep:aws-config", "dep:aws-sdk-ec2", "dep:aws-sdk-cloudformation", "dep:aws-sdk-route53", "dep:aws-sdk-ssm"]
