[package]
authors = ["Tyler Cook"]
description = "A command-line application for managing outpost"
edition = "2021"
license = "Unlicense"
name = "outpost"
repository = "https://github.com/fossable/outpost"
rust-version = "1.82"
version = "0.0.9"

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-axum"], optional = true }
askama_axum = { version = "0.4.0", optional = true }
atty = "0.2"
aws-config = { version = "1.5.3", optional = true, features = [
  "behavior-version-latest",
] }
aws-sdk-ec2 = { version = "1.55.0", optional = true }
aws-sdk-cloudformation = { version = "1.0", optional = true }
aws-sdk-route53 = { version = "1.0", optional = true }
axum = { version = "0.7.5", optional = true }
base64 = "0.22"
chrono = { version = "0.4", optional = true }
clap = { version = "4.5.4", features = ["string", "derive", "env"] }
rust-embed = { version = "8.4.0", features = [
  "axum",
  "debug-embed",
], optional = true }
futures = "0.3.30"
indicatif = "0.18.3"
mime_guess = { version = "2.0", optional = true }
nix = { version = "0.30.1", features = ["net"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.27"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5"
validator = { version = "0.20.0", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.4", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }

[features]
default = ["aws", "dashboard"]
cloudflare = []
aws = [
  "dep:aws-config",
  "dep:aws-sdk-ec2",
  "dep:aws-sdk-cloudformation",
  "dep:aws-sdk-route53",
]
dashboard = [
  "dep:axum",
  "dep:askama",
  "dep:askama_axum",
  "dep:rust-embed",
  "dep:mime_guess",
  "dep:chrono",
]

[[example]]
name = "ui_aws"
required-features = ["dashboard"]

[[example]]
name = "ui_cloudflare"
required-features = ["dashboard"]

[[example]]
name = "ui_no_proxy"
required-features = ["dashboard"]

[[example]]
name = "ui_high_traffic"
required-features = ["dashboard"]
