[package]
authors = ["Tyler Cook"]
description = "A command-line application for managing outpost"
edition = "2021"
license = "AGPL-3.0-only"
name = "outpost"
repository = "https://github.com/fossable/outpost"
rust-version = "1.74"
version = "0.0.1"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
clap = { version = "4.5.4", features = ["string", "derive"] }

[build-dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["blocking"] }

[features]
cloudflare = []
aws = []
